--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,5 +9,6 @@
 <body>
     <p class="main">这是index</p>
     <img src="../assets/test.png" alt="">
+    <!-- <script src="../libs/axios.js"></script> -->
 </body>
 </html>
